--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "debug": "~4.3.4",
     "express": "^4.21.2",
     "mongoose": "^7.8.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
